--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<%# <div class="footer">
   <div class="footer-links">
     <a href="#"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -9,4 +9,66 @@
   <div class="footer-copyright">
     This footer is made with <i class="fas fa-heart"></i> at Le Wagon
   </div>
-</div>
+</div> %>
+
+<footer>
+  <div class="row primary">
+
+    <div class="column about">
+        <h3>Crazy Party Stuff</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+          voluptatem corporis error non
+        </p>
+
+        <div class="social">
+        <i class="fa-brands fa-facebook-square"></i>
+        <i class="fa-brands fa-instagram-square"></i>
+        <i class="fa-brands fa-twitter-square"></i>
+        <i class="fa-brands fa-youtube-square"></i>
+        <i class="fa-brands fa-whatsapp-square"></i>
+        </div>
+    </div>
+
+    <div class="column links">
+      <h3>Some Links</h3>
+      <ul>
+          <li><a href="#faq">F.A.Q</a></li>
+          <li><a href="#cookies-policy">Cookies Policy</a></li>
+          <li><a href="#terms-of-services">Terms Of Service</a></li>
+          <li><a href="#support">Support</a></li>
+      </ul>
+    </div>
+
+    <div class="column links">
+      <h3>Some Links</h3>
+      <ul>
+        <li><a href="#faq">F.A.Q</a></li>
+        <li><a href="#cookies-policy">Cookies Policy</a></li>
+        <li><a href="#terms-of-services">Terms Of Service</a></li>
+        <li><a href="#support">Support</a></li>
+      </ul>
+    </div>
+
+    <div class="column subscribe">
+      <h3>Newsletter</h3>
+      <div>
+          <input type="email" placeholder="Your email id here" />
+          <button>Subscribe</button>
+      </div>
+    </div>
+
+    <div class="row copyright">
+      <div class="footer-menu">
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Contact</a>
+          <a href="">Blog</a>
+          <a href="">Social</a>
+      </div>
+
+      <p>Copyright &copy; 2022</p>
+    </div>
+
+  </div>
+</footer>
