Navbar ok-ish, footer removed (for now)

--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -11,7 +11,9 @@
   </div>
 </div> %>
 
-<footer>
+<%#  %>
+
+<%# <footer>
   <div class="row primary">
 
     <div class="column about">
@@ -71,4 +73,19 @@
     </div>
 
   </div>
-</footer>
+</footer> %> %>
+
+<%#  %>
+
+    <%# <div id="footer">
+      <p>FOOTER</p>
+      <ul class="list-inline">
+  <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+  <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+  <li><a href="#"><i class="fab fa-github"></i></a></li>
+      </ul>
+    </div>
+
+<%#  %>
+
