--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,6 +1,27 @@
-<div class="topnav">
+<%# <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#new">New</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
-</div>
+</div> %>
+
+<%#  %>
+
+<div>HELLO</div>
+<p data-item='Crazy Party Stuff'>Crazy Party Stuff</p>
+
+<section>
+  <div>Let's party:</div>
+  <nav>
+    <ul class="menuItems">
+      <li><a href='#' data-item='Home'>Home</a></li>
+      <li><a href='#' data-item='About'>About</a></li>
+      <li><a href='#' data-item='Party stuff'>Party stuff</a></li>
+      <li><a href='#' data-item='Blog'>Blog</a></li>
+      <li><a href='#' data-item='Contact'>Contact</a></li>
+    </ul>
+  </nav>
+
+</section>
+
+<%#  %>
