Navbar ongoing - still no footer

--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -8,7 +8,7 @@
 <%#  %>
 
 <div>HELLO</div>
-<p data-item='Crazy Party Stuff'>Crazy Party Stuff</p>
+<p data-item='Crazy.Party.Stuff'>Crazy.Party.Stuff</p>
 
 <section>
   <div>Let's party:</div>
@@ -16,7 +16,7 @@
     <ul class="menuItems">
       <li><a href='#' data-item='Home'>Home</a></li>
       <li><a href='#' data-item='About'>About</a></li>
-      <li><a href='#' data-item='Party stuff'>Party stuff</a></li>
+      <li><a href='#' data-item='Party!!'>Party!!</a></li>
       <li><a href='#' data-item='Blog'>Blog</a></li>
       <li><a href='#' data-item='Contact'>Contact</a></li>
     </ul>
