--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: black;
 }
 .footer-links {
   display: flex;
@@ -39,7 +39,7 @@
 //   background-color: #121315;
 //   color: #a7a7a7;
 //   font-size: 16px;
-//   min-height:100px;
+//   height:100px;
 //   width:100%;
 //   position: sticky;
 // }
