--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -7,7 +7,7 @@
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+    Copyright <i class="fas fa-heart"></i> 2022
   </div>
 </div>
 
