--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -17,8 +17,8 @@
       <li><a href='#' data-item='Home'>Home</a></li>
       <li><a href='#' data-item='About'>About</a></li>
       <li><a href='#' data-item='Party!!'>Party!!</a></li>
-      <li><a href='#' data-item='Blog'>Blog</a></li>
       <li><a href='#' data-item='Contact'>Contact</a></li>
+      <li><a href='#' data-item='Connect'>Connect</a></li>
     </ul>
   </nav>
 
