--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,107 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <title>Crazy Party Stuff!</title>
+</head>
+    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1530104091755-015d31dfa0b9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1909&q=80);">
+      <div class="container">
+        <h1><strong>Crazy Party Stuff</strong> ! 🥳 </h1>
+      </div>
+    </div>
+<body>
+  <div class="card-behavior">
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1583841046364-6eee97af5d48?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">Flipper</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1572289758057-3e0f4327833b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">Arcade</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1576280846390-40436269abe0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1364&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">Bowling</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+   </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1558350091-f40bd1b6dd2a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">Hide & Seek ✨Catacombs✨</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1610973054332-47ba6d5350c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjYwfHxqdW1wfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=800&q=60);">
+      <div class="card-content">
+        <h3 class="card-title">Cat on two legs</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1609750186885-453cb10e58fb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">bungee Jumping</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1588217885773-2f27c9c3b1c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=995&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">EscapeGame (C-L-H Edition)</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1575677155757-b5eb75df3a4e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">Quad</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1552910919-96dd34d2c4e0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">RollerCoaster - Large Garden</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1510860933079-0d4aa3d081bb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=988&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">Ski Jumping (FullPackage 🚁)</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1586097494908-6dbb35137167?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2340&q=80)">
+      <div class="card-content">
+        <h3 class="card-title">Helicopter ⛷ ⁇</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1614602355999-bc295cba75b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1364&q=80);">
+      <div class="card-content">
+        <h3 class="card-title">Paintball</h3>
+        <a href="#" class="button">Learn More...</a>
+      </div>
+    </div>
+
+  </div>
+</body>
+</html>
