--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -41,96 +41,175 @@
 
 //
 
-* {
-  padding: 0;
-  margin: 0;
-}
+// * {
+//   padding: 0;
+//   margin: 0;
+// }
 
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  min-height: 100vh;
-  font-family: Hack, monospace;
-}
+// body {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   position: relative;
+//   min-height: 100vh;
+//   font-family: Hack, monospace;
+// }
 
-div {
-  color: #727272;
-  text-align: center;
-}
+// div {
+//   color: #727272;
+//   text-align: center;
+// }
 
-p {
+.cps {
   margin: 16px;
   font-size: 96px;
   color: #ccc;
   text-transform: uppercase;
-  font-weight: 600;
+  font-weight: 500;
   transition: all 1s ease-in-out;
   position: relative;
 
-  &::before {
-    content: attr(data-item);
-    transition: all 1s ease-in-out;
-    color: black;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 0;
-    overflow: hidden;
-  }
+  // &::before {
+  //   content: attr(CPS);
+  //   top: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0;
+  //   width: 0;
+  //   overflow: hidden;
+  // }
 
-  &:hover {
-    &::before {
-      width: 100%;
+  // &:hover {
+    //   &::before {
+      //     width: 100%;
+      //   }
+      // }
     }
-  }
+
+    .cps:hover {
+    transition: all 1s ease-in-out;
+    left: 2s;
+    // transition: 2s;
+    // transition-timing-function: ease-in-out;
+    transition: opacity 0s ease-in 600ms, opacity 600ms;
+    color: black;
+    position: sticky;
+
 }
 
-nav {
-  margin: 25px;
-  background: #f9f9f9;
-  padding: 16px;
-  .menuItems {
-    list-style: none;
-    display: flex;
+// nav {
+//   margin: 25px;
+//   background: #f9f9f9;
+//   padding: 16px;
+//   .menuItems {
+//     list-style: none;
+//     display: flex;
 
-    li {
-      margin: 50px;
+//     li {
+//       margin: 50px;
 
-      a {
-        text-decoration: none;
-        color: #8f8f8f;
-        font-size: 24px;
-        font-weight: 400;
-        transition: all 0.5s ease-in-out;
-        position: relative;
-        text-transform: uppercase;
+//       a {
+//         text-decoration: none;
+//         color: #8f8f8f;
+//         font-size: 24px;
+//         font-weight: 400;
+//         transition: all 0.5s ease-in-out;
+//         position: relative;
+//         text-transform: uppercase;
 
-        // &::before {
-        //   content: attr(data-item);
-        //   transition: 0.5s;
-        //   color: black;
-        //   position: absolute;
-        //   top: 0;
-        //   bottom: 0;
-        //   left: 0;
-        //   right: 0;
-        //   width: 0;
-        //   overflow: hidden;
-        // }
+//         // &::before {
+//         //   content: attr(data-item);
+//         //   transition: 0.5s;
+//         //   color: black;
+//         //   position: absolute;
+//         //   top: 0;
+//         //   bottom: 0;
+//         //   left: 0;
+//         //   right: 0;
+//         //   width: 0;
+//         //   overflow: hidden;
+//         // }
 
-        &:hover {
-        //   &::before {
-        //     width: 100%;
-        //     transition: all 0.5s ease-in-out;
-        //   }
-          background: black;
-        }
-      }
-    }
+//         &:hover {
+//         //   &::before {
+//         //     width: 100%;
+//         //     transition: all 0.5s ease-in-out;
+//         //   }
+//           background: black;
+//         }
+//       }
+//     }
+//   }
+// }
+
+* {box-sizing: border-box;}
+
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: black;
+  color: white;
+}
+
+.topnav .login-container {
+  float: right;
+}
+
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+  width: 150px;
+}
+
+.topnav .login-container button {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .login-container button:hover {
+  background: #ccc;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .login-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .login-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
   }
 }
