--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,65 +1,36 @@
-.card-behavior {
-  padding: 40px 140px 140px 100px;
-  width: 100%;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  display: flex;
-  min-height: 100vh; /* emplacement de la card */
-  line-height: 1.6; /* + le chiffre augmente;+ les cards descendent*/
-  background: #e2ecec;
-  grid-row-gap: 40px;
-  font-family: 'Roboto', sans-serif;
+.attractions {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+  align-items: center;
 }
 
+@media(max-width: 992px) {
+  .attractions {
+    grid-template-columns: 1fr 1fr;
+  }
+}
 
-.card {
-  color:whitesmoke; /*couleur du text */
-  background-size: cover;
-  width: 45ch;
-  height: 65ch;
-  border-radius: 3%;
-  overflow: hidden;
-  transition: transform 500ms ease;
-  justify-content: space-around;
-  padding: auto;
+@media(max-width: 768px) {
+  .attractions {
+    grid-template-columns: 1fr;
+  }
+}
+
+.attraction-card {
+  font-family: 'Roboto', sans-serif;
+  height: 200px;
+  color: white;
   margin: auto;
-  margin-bottom: 5px;
-}
 
-.card:hover,
-.card:focus-within {
-  transform: scale(1.05);
-}
+  h3 {
+    font-size: 20px;
+    font-weight: bold;
+  }
 
-.card-content {
-  --padding: 0.5rem;
-  padding:var(--padding);
-  background: linear-gradient(to top left, transparent,rgba(0, 0, 0, 0));
-}
-
-.card-title {
-  position: relative;
-  width: fit-content; /* one line only or break */
-  font-family: 'Roboto', sans-serif;
-}
-
-/*underline */
-.card-title::after {
-  content: "";
-  position: absolute;
-  height: 1.5px;
-  left: calc(var(--padding) * -1);
-  bottom: -2px;
-  width: calc(100% + var(--padding));
-  background:#3ea5fa;
-  transform: scaleX(0);
-  transform-origin: left;
-  transition: transform 500ms ease;
-}
-
-/* lenght underline */
-.card:hover .card-title::after,
-.card:focus-within .card-title::after {
-  transform: scaleX(1);
-
+  p {
+    font-size: 12px;
+    font-weight: normal;
+    opacity: 1;
+  }
 }
