--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -88,12 +88,23 @@
     }
 
     .cps:hover {
-    transition: all 1s ease-in-out;
-    left: 2s;
+    // transition: all 1s ease-in-out;
+    // left: 2s;
     // transition: 2s;
     // transition-timing-function: ease-in-out;
-    transition: opacity 0s ease-in 600ms, opacity 600ms;
-    color: black;
+    // transition: opacity 0s ease-in 600ms, opacity 600ms;
+    animation: flicker 1.5s infinite alternate;
+    color: #fff;
+    text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px teal,
+      0 0 82px teal,
+      0 0 92px teal,
+      0 0 102px teal,
+      0 0 151px teal;
+    color: rgb(5, 100, 100);
     position: sticky;
 
 }
@@ -145,9 +156,14 @@
 
 * {box-sizing: border-box;}
 
+.btn-login {
+  float: right;
+}
+
 .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
+  padding: 12px;
 }
 
 .topnav a {
@@ -185,8 +201,8 @@
 .topnav .login-container button {
   float: right;
   padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
+  margin-top: -6px;
+  margin-right: 0px;
   background: #ddd;
   font-size: 17px;
   border: none;
