--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -49,7 +49,7 @@
   width: 45ch;
   height: 65ch;
   border-radius: 3%;
-  /* overflow: hidden; */
+  overflow: hidden;
   transition: transform 500ms ease;
   justify-content: space-around;
   padding: auto;
