--- a/app/views/attractions/edit.html.erb
+++ b/app/views/attractions/edit.html.erb
@@ -1,1 +1,4 @@
-<%= render "form", attraction: @attraction %>
+<div class="container">
+  <h1>Edit <%= @attraction.name %></h1>
+  <%= render "form", attraction: @attraction %>
+</div>
