--- a/app/views/attractions/new.html.erb
+++ b/app/views/attractions/new.html.erb
@@ -1,1 +1,4 @@
-<%= render "form", attraction: @attraction %>
+<div class="container">
+  <h1>New party attraction</h1>
+  <%= render "form", attraction: @attraction %>
+</div>
