--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -28,10 +28,10 @@
 
 <div class="topnav">
 
-  <a class="active" href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#attractions">Attractions</a>
-  <a href="#contact">Contact</a>
+  <a class="active" href="/">Home</a>
+  <a href="./about">About</a>
+  <a href="./attractions">Attractions</a>
+  <a href="./contact">Contact</a>
 
   <div class="login-container">
     <form action="/action_page.php">
