--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -28,7 +28,7 @@
 
 <div class="topnav">
 
-  <a class="active" href="/">Home</a>
+  <a href="/">Home</a>
   <a href="./about">About</a>
   <a href="./attractions">Attractions</a>
   <a href="./contact">Contact</a>
