--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -8,7 +8,7 @@
 <%#  %>
 
 <div class="upper">WELCOME</div>
-<p class="cps">Crazy.Party.Stuff</p>
+<a href="/"><p class="cps">Crazy.Party.Stuff</p></a>
 
 <%# <section>
   <div>Let's party:</div>
@@ -29,8 +29,8 @@
 <div class="topnav">
 
   <a href="/">Home</a>
-  <a href="./about">About</a>
   <a href="./attractions">Attractions</a>
+  <a href="./about">About</a>
   <a href="./contact">Contact</a>
 
   <div class="login-container">
