--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -3,9 +3,9 @@
 
   <div class="attractions">
     <% @attractions.each do |attraction| %>
-      <div class="attraction-card"
+      <div class="attraction-card" <% if @attraction.photo.attached? %>
       style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-      url('<%= cl_image_path attraction.photo.key, crop: :fill %>')">
+      url('<%= cl_image_path attraction.photo.key, crop: :fill %>')" <% end %>>
         <h3> <%= link_to attraction.name, attraction_path(attraction) %>  </h3>
         <p> <%= attraction.one_liner %> </p>
       </div>
