--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -33,6 +33,11 @@
   <a href="./about">About</a>
   <a href="./contact">Contact</a>
 
+  <% if user_signed_in? %>
+    <a href="./my_attractions">My attractions</a>
+    <a href="./user_bookings">My bookings</a>
+  <% end %>
+
   <div class="login-container">
   <% if !user_signed_in? %>
 
