--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -29,13 +29,13 @@
 <div class="topnav">
 
   <a href="/">Home</a>
-  <a href="./attractions">Attractions</a>
-  <a href="./about">About</a>
-  <a href="./contact">Contact</a>
+  <a href="/attractions">Attractions</a>
+  <a href="/about">About</a>
+  <a href="/contact">Contact</a>
 
   <% if user_signed_in? %>
-    <a href="./my_attractions">My attractions</a>
-    <a href="./user_bookings">My bookings</a>
+    <a href="/my_attractions">My attractions</a>
+    <a href="/user_bookings">My bookings</a>
   <% end %>
 
   <div class="login-container">
