adding content to about and contact pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,24 @@
-<h1>About us</h1>
+<div class="container">
+  <h1 class="text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
+      url('https://cdn.shopify.com/s/files/1/0467/5026/9606/products/lets-party-neon-sign_800x_613182e2-cf3a-4253-9c2e-2fcb6db94e44_600x.jpg?v=1631195583');
+      color: white; height:300px">About us</h1>
+
+  <p>
+    Make your next party or event super fun with some of our wild, wacky,
+    and crazy stuff rentals! We have some of the most bizarre rental items in
+    all of France. But the crazy items are some of the most fun to play!
+    Race around on one of our silly racing items, like the bathtubs or the toilets!
+    Try some sumo wrestling with our sumo suits.
+    Or perhaps you'd like to get a foam pit party going at your next event!
+  </p>
+
+  <p>
+    All of our crazy items are sure to bring in a crowd.
+    Each one is so unique looking that everyone will want to see what it
+    is or have a go on it. People who have
+    rented from us in the past and have been extremely happy about our selection
+    of games and equipment! Browse through our catalog of crazy items and find
+    some that you like. Or give us a call and one of our friendly staff will help
+    you design your next event!
+  </p>
+</div>
