--- a/app/views/bookings/user_bookings.html.erb
+++ b/app/views/bookings/user_bookings.html.erb
@@ -1,14 +1,17 @@
-<h1>
+<div class="book">
   <% @bookings.each do |booking|%>
-   <tr>
-      <th><%= booking.start_date %></th>
+
+  <div class="attracname"><%= booking.attraction.name %></div> /////
+   <div class="date">
+      <th><%= booking.start_date %></th> =>
       <th><%= booking.end_date %></th>
-   </tr>
+   </div>
   <% if booking.attraction.photo.attached? %>
     <%= cl_image_tag booking.attraction.photo.key, height: 300, width: 400, crop: :fill %>
   <% end %>
-   <% end %>
-</h1>
+
+  <% end %>
+</div>
 
 
 <%# montrer réservations %>
