--- a/app/views/attractions/user_attractions.html.erb
+++ b/app/views/attractions/user_attractions.html.erb
@@ -1,4 +1,4 @@
-<h1>Your attractions</h1>
+<h1>My attractions</h1>
 <%= link_to "Create a party attraction", new_attraction_path %>
 <% if flash[:alert] %>
   <div class="flash flash-success alert alert-dismissible fade show" role="alert">
