--- a/app/views/bookings/user_bookings.html.erb
+++ b/app/views/bookings/user_bookings.html.erb
@@ -1,4 +1,6 @@
+<h1>My bookings</h1>
 <div class="book">
+
   <% @bookings.each do |booking|%>
 
   <div class="attracname"><%= booking.attraction.name %></div> /////
