--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<%# <div class="footer">
   <div class="footer-links">
   <i class="fa-brands fa-github"></i>
     <a href="#"><i class="fab fa-github"></i></a>
@@ -11,7 +11,7 @@
     Copyright <i class="fas fa-heart"></i> 2022
   </div>
 </div>
-
+ %>
 <%#  %>
 
 <%# <footer>
