--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,5 +18,5 @@
   </div>
 
 <div class="text-center">
-  <a href="./attractions" class="btn btn-primary">Voir toutes les attractions</a>
+  <a href="./attractions" class="button">Voir toutes les attractions</a>
 </div>
