--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
   <h1>Party attractions near you</h1>
 
-  <div class="attractions">
+  <div class="card_behavior">
     <% @attractions.each do |attraction| %>
-      <div class="attraction-card" <% if attraction.photo && attraction.photo.attached? %>
-      style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-      url('<%= cl_image_path attraction.photo.key, crop: :fill %>')" <% end %>>
-        <h3> <%= link_to attraction.name, attraction_path(attraction) %>  </h3>
-        <p> <%= attraction.one_liner %> </p>
+      <div class="card" <% if attraction.photo && attraction.photo.attached? %>
+      style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path attraction.photo.key, crop: :fill %>')" <% end %>>
+        <div class="card-content">
+          <h3 class="card-title"><%= attraction.name %></h3>
+            <p class="card-body"><%= attraction.one_liner %></p>
+             <%= link_to "View Details...", attraction_path(attraction), class: 'button' %>
+        </div>
       </div>
     <% end %>
   </div>
