--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -164,6 +164,17 @@ a {
   float: right;
 }
 
+.btn-logout {
+  float: right;
+  padding: 6px;
+  margin-top: 3px;
+  margin-right: 0px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
 .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
