added a price to the attractions table and in all the views where there are attractions

--- a/app/views/attractions/_form.html.erb
+++ b/app/views/attractions/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :name %>
   <%= f.input :photo, as: :file %>
   <%= f.input :one_liner %>
+  <%= f.input :price, :label => "Price per day", %>
   <%= f.input :description %>
   <%= f.submit "Save attraction", class: "btn btn-primary" %>
 <% end %>
