--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,6 +11,7 @@
         <div class="card-content">
           <h3 class="card-title"><%= attraction.name %></h3>
           <p class="card-body"><%= attraction.one_liner %></p>
+          <p class="card-body"><%= attraction.price %> € per day</p>
           <%= link_to "Learn More...", attraction_path(attraction), class: 'button' %>
         </div>
       </div>
