Footer almost OK

--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,17 +1,19 @@
-<%# <div class="footer">
+<div class="footer">
   <div class="footer-links">
-  <i class="fa-brands fa-github"></i>
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+  <img src="https://img.icons8.com/fluency-systems-filled/48/000000/user.png"/>
+  <%# <i class="fad fa-user"></i> %>
+  <%# <i class="fa-brands fa-github"></i> %>
+    <a href="#"><img src="https://img.icons8.com/material-outlined/48/000000/youtube--v1.png"/></a>
+    <a href="#"><img src="https://img.icons8.com/material-outlined/48/000000/instagram-new--v1.png"/></i></a>
+    <a href="#"><img src="https://img.icons8.com/fluency-systems-regular/48/000000/facebook.png"/></a>
+    <a href="#"><img src="https://img.icons8.com/material-outlined/48/000000/twitter.png"/></a>
+    <a href="#"><img src="https://img.icons8.com/material-outlined/48/000000/linkedin--v1.png"/></a>
   </div>
   <div class="footer-copyright">
-    Copyright <i class="fas fa-heart"></i> 2022
+    Copyright <img src="https://img.icons8.com/color/48/000000/like--v1.png"/> 2022
   </div>
 </div>
- %>
+
 <%#  %>
 
 <%# <footer>
