--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -8,7 +8,9 @@
 <%#  %>
 
 <div class="upper">WELCOME</div>
-<a href="/"><p class="cps">Crazy.Party.Stuff</p></a>
+<a href="/"><p class="crazy">Crazy</p></a>
+<a href="/"><p class="party">Party</p></a>
+<a href="/"><p class="stuff">Stuff</p></a>
 
 <%# <section>
   <div>Let's party:</div>
