--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -2,7 +2,7 @@
   background: #F4F4F4;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  // justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
   color: black;
@@ -23,6 +23,11 @@
 }
 .footer .fa-heart {
   color: black;
+}
+
+.footer-copyright {
+  font-size: large;
+  font-weight: bold;
 }
 
 //
