--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -65,14 +65,15 @@ a {
   text-decoration: none;
 }
 
-.cps {
+.crazy {
   margin: 16px;
-  font-size: 30px;
+  font-size: 20px;
   color: #ccc;
   text-transform: uppercase;
-  font-weight: 500;
+  // font-weight: 500;
   transition: all 1s ease-in-out;
   position: relative;
+  font-weight: bold;
 
   // &::before {
   //   content: attr(CPS);
@@ -89,9 +90,9 @@ a {
       //     width: 100%;
       //   }
       // }
-    }
+  }
 
-    .cps:hover {
+    .crazy:hover {
     // transition: all 1s ease-in-out;
     // left: 2s;
     // transition: 2s;
@@ -103,14 +104,70 @@ a {
       0 0 7px #fff,
       0 0 10px #fff,
       0 0 21px #fff,
-      0 0 42px teal,
-      0 0 82px teal,
-      0 0 92px teal,
-      0 0 102px teal,
-      0 0 151px teal;
-    color: rgb(5, 100, 100);
+      0 0 42px orangered,
+      0 0 82px orangered,
+      0 0 92px orangered,
+      0 0 102px orangered,
+      0 0 151px orangered;
+    color: rgb(255, 100, 100);
     position: sticky;
+}
 
+.party {
+  margin: 16px;
+  font-size: 30px;
+  color: #ccc;
+  // text-transform: uppercase;
+  // font-weight: 500;
+  transition: all 1s ease-in-out;
+  position: relative;
+  font-weight: bolder;
+  font-family: cursive;
+}
+
+.party:hover {
+  animation: flicker 1.5s infinite alternate;
+  color: #fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px purple,
+    0 0 82px purple,
+    0 0 92px purple,
+    0 0 102px purple,
+    0 0 151px purple;
+  color: rgb(162, 50, 162);
+  position: sticky;
+}
+
+.stuff {
+  margin: 16px;
+  font-size: 20px;
+  color: #ccc;
+  // text-transform: uppercase;
+  // font-weight: 500;
+  transition: all 1s ease-in-out;
+  position: relative;
+  font-weight: bold;
+  font-family: monospace;
+  font-stretch: expanded;
+}
+
+.stuff:hover {
+  animation: flicker 1.5s infinite alternate;
+  color: #fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px blue,
+    0 0 82px blue,
+    0 0 92px blue,
+    0 0 102px blue,
+    0 0 151px blue;
+  color: rgb(15, 120, 235);
+  position: sticky;
 }
 
 // nav {
