--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,31 +10,60 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 100px ;
+  padding: 250px ;
+  margin: 20px 70px 20px 70px;
+  border-radius: 30px;
 }
 
-.banner h1 {
+x-sign:nth-of-type(8) {
   margin: 0;
-  color: white;
+  color: blue;
+  --color1: blueviolet ;
+  --color2: orange;
+  --color3: brown;
+  --color4: purple;
+  /* color: #F4F4F4;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
-  font-weight: bold;
+  font-weight: bold; */
 }
 
-.banner h1:hover {
+x-sign {
+  --interval: 1s;
+  display: block;
+  font-weight: 32px ;
+  text-shadow:
+    10 0 10px var(--color1),
+    10 0 20px var(--color2),
+    0 0 40px var(--color3),
+    0 0 80px var(--color4);
+  will-change: filter, color;
+  filter: saturate(60%);
+  animation: flicker steps(100) var(--interval) 1s infinite;
+}
+
+
+
+@keyframes flicker {
+  50% {
+    color: blue ;
+    filter: saturate(200%) hue-rotate(20deg);
+  }
+}
+
+/* .banner h1:hover {
   color: #3ea5fa;
   text-shadow: 0 0 5px #3ea5fa, 0 0 25px #3ea5fa, 0 0 50px #3ea5fa, 0 0 200px #3ea5fa;
   font-weight: bolder;
-}
+} */
 
 
 .card-behavior {
-  padding: 40px 140px 140px 100px;
+  padding: 40px 70px 40px 70px; /* marge */
   width: 100%;
   justify-content: space-between;
   flex-wrap: wrap;
   display: flex;
-  min-height: 100vh; /* emplacement de la card */
+  min-height: 10vh; /* emplacement de la card */
   line-height: 1.6; /* + le chiffre augmente;+ les cards descendent*/
   background: #F4F4F4; /*couleur du background => à mettre ds le body */
   grid-row-gap: 40px;
@@ -43,34 +72,42 @@
 
 
 .card {
-  color:whitesmoke; /*couleur du text */
-  background-size: cover;
-  background-color: rgb(98, 185, 236);
-  width: 45ch;
-  height: 65ch;
-  border-radius: 3%;
+  color:rgb(3, 3, 3); /*couleur du text */
+  background-size: contain;
+  background-position: center top ;
+  background-repeat: no-repeat;
+  background-color: #F4F4F4;
+  width: 40ch;
+  height: 50ch;
+  border-radius: 30px;
   overflow: hidden;
   transition: transform 500ms ease;
   justify-content: space-around;
-  padding: auto;
-  margin: auto;
-  margin-bottom: 5px;
+  margin: 0px 0px 0px 0px;
+	filter: grayscale(100%);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+  box-shadow: 0px 5px 20px #999;
 }
+
+
 
 .card:hover,
 .card:focus-within {
   transform: scale(1.05);
+	filter: grayscale(0);
+
 }
 
 .card-content {
   --padding: 0.5rem;
   padding:var(--padding);
-  background: linear-gradient(to top left, transparent,rgba(0, 0, 0, 0));
+  background: linear-gradient( transparent,rgba(17, 16, 16, 0.615));
+
 }
 
 .card-title {
   position: relative;
-  width: fit-content; /* one line only or break */
   font-family: 'Roboto', sans-serif;
 }
 
@@ -84,8 +121,8 @@
   width: calc(100% + var(--padding));
   background:#3ea5fa;
   transform: scaleX(0);
-  transform-origin: left;
-  transition: transform 500ms ease;
+  transform-origin: center;
+
 }
 
 /* lenght underline */
@@ -99,10 +136,10 @@
   cursor: pointer;
   display: inline-block;
   text-decoration: none;
-  color: #fefefe;
+  color: black;
   padding: 0.2em 1.25em;
   border-radius: 0.25rem;
-  transform-origin: left;
+  transform-origin: center;
 }
 
 .button:hover,
@@ -112,6 +149,9 @@
   transform-origin: left;
 }
 
+.text-center {
+  padding: 40px 70px 40px 70px;
+}
 
 
 @media screen and (max-width: 1024px){
